# rakoda-programming-language

./: .gitignore  Cargo.toml  fix_autocomplete.py  fix_db_info.py  fix_db_workspace.py  tes.txt  test_ai.rpl  test_setiap.rpl  upgrade_to_codefield.py
.github/scripts/: upload_to_gdrive.py
.github/workflows/: build-apk.yml  build-macos.yml  build-studio-desktop.yml  build-windows.yml  ci.yml  deploy-docs.yml  release.yml
apps/studio/: check_codecontroller.dart  check_codefield.dart  check_gutter.dart  fix_finally.py  fix_init.py  patch_history.py  patch_pagination.py  pubspec.yaml  test_highlight.dart  test_options.dart  test_path.dart  test_pluto.dart
apps/studio/lib/: main.dart
apps/studio/lib/features/browser/: browser_workspace.dart
apps/studio/lib/features/database/: connection_dialog.dart  database_explorer.dart  database_workspace.dart  query_history_service.dart
apps/studio/lib/features/editor/: code_editor.dart  editor_tab.dart
apps/studio/lib/features/http/: http_workspace.dart
apps/studio/lib/features/settings/: settings_provider.dart  settings_screen.dart
apps/studio/lib/features/welcome/: activity_bar.dart  project_screen.dart  welcome_screen.dart
apps/studio/lib/models/: database_connection.dart
apps/studio/lib/services/database/: connection_service.dart  database_service.dart  mysql_service.dart  postgres_service.dart  sqlite_service.dart
apps/studio/test/: widget_test.dart
apps/studio/windows/: rpl-studio.iss
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  optimizer.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs  pkg.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: lib.rs  lingkungan.rs  objek.rs  template.rs
crates/interpreter/src/stdlib/: adapter.rs  core.rs  env.rs  file.rs  json.rs  kripto.rs  list.rs  matematika.rs  mod.rs  string.rs  waktu.rs
crates/interpreter/src/stdlib/http/: client.rs  download.rs  mod.rs  request.rs  response.rs  upload.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: core.rs  env.rs  file.rs  http.rs  jenis.rs  json.rs  kripto.rs  lib.rs  list.rs  matematika.rs  string.rs  template.rs  waktu.rs
crates/typechecker/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: compiler.rs  heap.rs  lib.rs  machine.rs  opcodes.rs  value.rs
crates/vm/src/stdlib/: adapter.rs  ai.rs  cookie.rs  core.rs  db.rs  dev_dashboard.rs  env.rs  file.rs  http.rs  json.rs  kripto.rs  list.rs  log.rs  matematika.rs  mod.rs  regex.rs  session.rs  string.rs  tugas.rs  waktu.rs  web.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
documentation/: docusaurus.config.ts  package.json
documentation/.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json  site-storage.json
documentation/.docusaurus/docusaurus-plugin-content-blog/default/: site-blog-2019-05-28-first-blog-post-mdx-fef.json  site-blog-2019-05-29-long-blog-post-mdx-d66.json  site-blog-2021-08-01-mdx-blog-post-mdx-593.json  site-blog-2021-08-26-welcome-index-mdx-718.json
documentation/.docusaurus/docusaurus-plugin-content-blog/default/p/: blog-archive-f05.json
documentation/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-01-variabel-md-c64.json  site-docs-02-percabangan-md-26a.json  site-docs-intro-mdx-f84.json  site-docs-tutorial-basics-congratulations-mdx-d20.json  site-docs-tutorial-basics-create-a-blog-post-mdx-bcf.json  site-docs-tutorial-basics-create-a-document-mdx-c88.json  site-docs-tutorial-basics-create-a-page-mdx-41f.json  site-docs-tutorial-basics-deploy-your-site-mdx-8b4.json  site-docs-tutorial-basics-markdown-features-mdx-18c.json  site-docs-tutorial-extras-manage-docs-versions-mdx-af3.json  site-docs-tutorial-extras-translate-your-site-mdx-25a.json
documentation/.docusaurus/docusaurus-plugin-content-docs/default/p/: docs-175.json
documentation/.docusaurus/docusaurus-plugin-debug/default/p/: docusaurus-debug-content-0d5.json
documentation/docs/: 01-variabel.md  02-percabangan.md  intro.mdx
documentation/src/css/: custom.css
documentation/src/pages/: download.module.css  download.tsx  index.tsx
documentation/static/: CNAME
examples/: debug_tugas.rpl  error_pintar.ipl  error_test.rpl  file.rpl  http.rpl  http_lanjut.rpl  http_phase2.rpl  http_phase3.rpl  json.rpl  komponen_navbar.rpl.html  list.rpl  matematika.rpl  matematika_v1.rpl  opt_jika.rpl  optimisasi.ipl  sekolah.db  server_lanjut.rpl  string.rpl  struktur_data.rpl  tes_vm.txt  test-ai.rpl  test.rpl  test1.rpl  test_acak.rpl  test_crash.ipl  test_regex.rpl  test_sekolah.db  test_string.rpl  test_tugas.rpl  test_waktu_acak.rpl  toko.db  uji_env.rpl  uji_main.rpl  uji_modul.rpl  vm_env_file.ipl  vm_error.rpl  vm_fungsi.rpl  vm_gc.rpl  vm_kompleks.rpl  vm_native.ipl  (+4 more)
examples/proyek_sekolah/: db_init.rpl  rute.rpl  server.rpl
examples/proyek_sekolah/kontroler/: absensi.rpl  auth.rpl  guru.rpl  jadwal.rpl  kelas.rpl  nilai.rpl  pengumuman.rpl  siswa.rpl
examples/proyek_sekolah/layanan/: auth_helper.rpl  validasi.rpl
examples/proyek_sekolah/model/: response.rpl
examples/proyek_sekolah/tampilan/: footer.rpl.html  header.rpl.html  index.rpl.html  login.rpl.html
examples/proyek_toko/: db_init.rpl  server.rpl  toko.db
examples/proyek_toko/tampilan/: footer.rpl.html  header.rpl.html  index.rpl.html
installer/inno/: rpl-setup.iss
