[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "4.0.0"
edition = "2024"
authors = ["Restu Dwi Cahyo"]
description = "Rakoda Programming Language - Bahasa pemrograman berbasis Indonesia untuk siswa SMK"
license = "MIT"
repository = "https://github.com/resitdc/rakoda-programming-language"

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
