[package]
name = "ipl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
interpreter = { path = "../interpreter" }
web = { path = "../web" }
tokio = { version = "1.0", features = ["full"] }
notify = "8.2.0"
ast = { path = "../ast" }
