[package]
name = "rpl"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
notify = "8.2.0"
runtime = { path = "../runtime" }
reqwest = { version = "0.12", features = ["blocking"] }
zip = "0.6.6"

[package.metadata.deb]
maintainer = "Restu Dwi Cahyo"
copyright = "2026, Restu Dwi Cahyo"
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
    ["target/release/rpl", "usr/bin/", "755"],
    ["examples/*.rpl", "usr/share/rpl/examples/", "644"],
    ["documentation/**/*", "usr/share/rpl/docs/", "644"],
    ["LICENSE", "usr/share/doc/rpl/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rpl", dest = "/usr/bin/rpl", mode = "755" },
    { source = "examples/*.rpl", dest = "/usr/share/rpl/examples/", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/rpl/LICENSE", mode = "644" },
]
