[package]
name = "interpreter"
version.workspace = true
edition.workspace = true

[dependencies]
errors = { path = "../errors" }
ast = { path = "../ast" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
stdlib = { path = "../stdlib" }
rand = "0.10.2"
chrono = "0.4.45"
serde_json = "1.0.150"
ureq = { version = "3.3.0", features = ["json", "multipart"] }
http = "1.4.2"
base64 = "0.22.1"
dotenvy = "0.15.7"
md-5 = "0.10.6"
sha2 = "0.10.8"
