[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
ast = { path = "../ast" }
vm = { path = "../vm" }
errors = { version = "1.0.0", path = "../errors" }
interpreter = { path = "../interpreter" }
web = { path = "../web" }
