[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
ast = { path = "../ast" }
vm = { path = "../vm" }
errors = { path = "../errors" }
stdlib = { path = "../stdlib" }
web = { path = "../web" }
typechecker = { path = "../typechecker" }
