[package]
name = "vm"
version = "1.0.0"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
serde_json = "1.0"
ureq = "3.3.0"
dotenvy = "0.15.7"
chrono = "0.4"
rand = "0.8"
errors = { path = "../errors" }
tiny_http = "0.12.0"
flate2 = "1.1.9"
brotli = "8.0.4"
uuid = { version = "1.23.4", features = ["v4"] }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
interpreter = { version = "1.0.0", path = "../interpreter" }
