[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
vm = { path = "../vm" }
stdlib = { path = "../stdlib" }
ast = { path = "../ast" }
parser = { path = "../parser" }
lexer = { path = "../lexer" }
errors = { path = "../errors" }
anyhow = { workspace = true }
